Fix visual issues on mobile, rework layout of projects

--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,6 @@ body {
     height: 100%;
     transition: background-color 1s ease;
     background-color: #cacaca;
-    /* -ms-overflow-style: none; */
 }
 
 /* body::-webkit-scrollbar {
@@ -379,7 +378,8 @@ li {
 
 /* Projects */
 .project-item {
-    display: flex;
+    width: 33%;
+    float: left;
     align-items: center;
     justify-content: center;
     margin-bottom: 10rem;
@@ -396,13 +396,9 @@ li {
     margin-right: 50px;
 }
 
-.project1_showSlide, .project2_showSlide, .project3_showSlide {
-    display: none
-}
-
 .slidercontainer {
     position: relative;
-    max-width: 30%;
+    max-width: 80%;
     margin: auto;
 }
 
@@ -472,22 +468,6 @@ li {
 }
 
 .project-description .view-details:hover {
-    color: #57799b;
-}
-
-.all-projects {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.all-projects .view-projects {
-    font-size: 1.5rem;
-    color: #46688a;
-    transition: color 650ms;
-}
-
-.all-projects .view-projects:hover {
     color: #57799b;
 }
 /* End Projects */
@@ -883,8 +863,24 @@ input[type="submit"]:hover {
         font-size: 3.5rem;
     }
 
+    .menu-toggle {
+        display: block;
+        position: fixed;
+        z-index: 51;
+    }
+
     .about .container {
         flex-direction: column;
+    }
+
+    .about-heading h1 {
+        font-size: 7rem;
+        float: center;
+        width: 90%;
+    }
+
+    .about-details {
+        width: 90%;
     }
 
     .profile-img {
@@ -893,6 +889,20 @@ input[type="submit"]:hover {
 
     .project-item {
         flex-direction: column;
+    }
+
+    .project-item {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-bottom: 10rem;
+        width: 100%;
+    }
+
+    .slidercontainer {
+        position: relative;
+        max-width: 80%;
+        margin: auto;
     }
 
     .project-img {
@@ -905,26 +915,63 @@ input[type="submit"]:hover {
         order: 2;
     }
 
-    .timeline::before {
-        content: '';
-        background: #1f1f1f;
-        width: 2px;
-        height: 95%;
+    .left, .right {
+        cursor: pointer;
         position: absolute;
-        left: 50%;
-        transform: translateX(-50%);
-        padding-bottom: 35px;
+        top: 50%;
+        padding: 16px;
+        margin-top: -22px;
+        color: white;
+        background-color: rgba(65, 62, 62, 0.35);
+        font-size: 18px;
+        transition: 0.6s ease;
+        border-radius: 3px;
+        user-select: none;
+    }
+
+    .timeline::before {
+        width: 0px;
     }
 
     .timeline-img {
-        width: 10px;
-        height: 10px;
-        background: rgb(160, 160, 160);
-        border-radius: 50%;
-        position: absolute;
-        left: 50.375%;
-        margin-top: 13px;
-        margin-left: -6px;
+        width: 0px;
+    }
+    
+    .timeline-content {
+        position: relative;
+        width: 100%;
+        padding: 10px 30px;
+        border-radius: 10px;
+        box-shadow: 20px 20px 25px 5px rgba(0, 0, 0, .2);
+    }
+
+    .timeline-item:nth-child(even) .timeline-content .date {
+        border-top-left-radius: 0px;
+        border-top-right-radius: 10px;
+        left: auto;
+        right: 0;
+    }
+
+    .timeline-item:nth-child(even) .timeline-content::after {
+        border-color: transparent transparent transparent transparent;
+    }
+    
+    .timeline-content::after {
+        border-color: transparent transparent transparent transparent;
+    }
+    
+    .timeline a {
+        background-color: #46688a;
+        color: #c8c8c8;
+        padding: 10px 20px;
+        text-transform: uppercase;
+        font-size: 14px;
+        margin-bottom: 20px;
+        margin-top: 10px;
+        display: inline-block;
+        border-radius: 10px;
+        box-shadow: 3px 3px 3px 2px rgba(0, 0, 0, .4);
+        transition: background-color 300ms;
     }
 
     .timeline p {
